--- a/Tip Calculator/Base.lproj/Main.storyboard
+++ b/Tip Calculator/Base.lproj/Main.storyboard
@@ -15,14 +15,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="Ab7-QF-2eD">
-                                <rect key="frame" x="24" y="211" width="366" height="386"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ab7-QF-2eD">
+                                <rect key="frame" x="12" y="232" width="390" height="330"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VpG-0X-425">
-                                        <rect key="frame" x="0.0" y="0.0" width="366" height="102"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="94"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JwY-Jw-agz">
-                                                <rect key="frame" x="0.0" y="0.0" width="366" height="64"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="390" height="64"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dollarSign" translatesAutoresizingMaskIntoConstraints="NO" id="CyP-fF-2Z6">
                                                         <rect key="frame" x="0.0" y="0.0" width="30" height="64"/>
@@ -32,7 +32,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0.0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SFZ-lc-AL3">
-                                                        <rect key="frame" x="30" y="0.0" width="336" height="64"/>
+                                                        <rect key="frame" x="30" y="0.0" width="360" height="64"/>
                                                         <color key="textColor" red="0.89411764705882346" green="0.95294117647058818" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="45"/>
                                                         <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
@@ -45,7 +45,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtC-up-va6">
-                                                <rect key="frame" x="0.0" y="64" width="366" height="38"/>
+                                                <rect key="frame" x="0.0" y="64" width="390" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <color key="textColor" red="0.54117647058823526" green="0.94901960784313721" blue="0.62745098039215685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -53,13 +53,13 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3Yy-gS-d2Q">
-                                        <rect key="frame" x="0.0" y="142" width="366" height="102"/>
+                                        <rect key="frame" x="0.0" y="114" width="390" height="94"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Uf-GC-BXg">
-                                                <rect key="frame" x="0.0" y="0.0" width="366" height="64"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="390" height="64"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="0" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wwr-Jj-qvZ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="316" height="64"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="340" height="64"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="64" id="NqY-qr-rut"/>
                                                         </constraints>
@@ -73,7 +73,7 @@
                                                         </userDefinedRuntimeAttributes>
                                                     </textField>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="percentageSign" translatesAutoresizingMaskIntoConstraints="NO" id="ZvK-xT-yGn">
-                                                        <rect key="frame" x="316" y="0.0" width="50" height="64"/>
+                                                        <rect key="frame" x="340" y="0.0" width="50" height="64"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="50" id="7Um-GW-NAO"/>
                                                             <constraint firstAttribute="height" constant="64" id="Flq-bp-CPF"/>
@@ -82,7 +82,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip Percentage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbF-LD-ArU">
-                                                <rect key="frame" x="0.0" y="64" width="366" height="38"/>
+                                                <rect key="frame" x="0.0" y="64" width="390" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <color key="textColor" red="0.54117647059999996" green="0.94901960780000005" blue="0.62745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -90,10 +90,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="-30" translatesAutoresizingMaskIntoConstraints="NO" id="08f-Zm-y2K">
-                                        <rect key="frame" x="0.0" y="284" width="366" height="102"/>
+                                        <rect key="frame" x="0.0" y="228" width="390" height="102"/>
                                         <subviews>
                                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="Fng-oV-cfp">
-                                                <rect key="frame" x="-2" y="0.0" width="370" height="103"/>
+                                                <rect key="frame" x="-2" y="0.0" width="394" height="103"/>
                                                 <color key="minimumTrackTintColor" red="0.54117647059999996" green="0.94901960780000005" blue="0.62745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="maximumTrackTintColor" red="0.89411764709999997" green="0.95294117649999999" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="thumbTintColor" red="0.54117647059999996" green="0.94901960780000005" blue="0.62745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -102,7 +102,7 @@
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Split For 1 Person" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRF-uE-ZXj">
-                                                <rect key="frame" x="0.0" y="72" width="366" height="30"/>
+                                                <rect key="frame" x="0.0" y="72" width="390" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                 <color key="textColor" red="0.54117647059999996" green="0.94901960780000005" blue="0.62745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -114,21 +114,18 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="IP3-ei-0Jn">
-                                <rect key="frame" x="0.0" y="627" width="414" height="269"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="269" id="tzI-63-Cn6"/>
-                                </constraints>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="Dkx-Ij-7Ax">
-                                <rect key="frame" x="87" y="44" width="240" height="80"/>
+                                <rect key="frame" x="87" y="84" width="240" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="1Ci-fO-x2V"/>
                                     <constraint firstAttribute="width" constant="240" id="RmS-EF-eqB"/>
                                 </constraints>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="IP3-ei-0Jn">
+                                <rect key="frame" x="0.0" y="623" width="414" height="273"/>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jHx-R0-QhO">
-                                <rect key="frame" x="24" y="718" width="366" height="94"/>
+                                <rect key="frame" x="24" y="702" width="366" height="94"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GWL-Gg-Dkq">
                                         <rect key="frame" x="0.0" y="0.0" width="366" height="64"/>
@@ -162,20 +159,19 @@
                         </subviews>
                         <color key="backgroundColor" red="0.14901960784313725" green="0.15294117647058825" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="jHx-R0-QhO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="3lJ-cu-G58"/>
                             <constraint firstItem="IP3-ei-0Jn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4NV-aM-kP2"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Dkx-Ij-7Ax" secondAttribute="trailing" constant="87" id="4jL-GP-vNf"/>
-                            <constraint firstItem="Dkx-Ij-7Ax" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="7VP-G7-1Mg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jHx-R0-QhO" secondAttribute="bottom" constant="50" id="7gM-qC-WIz"/>
+                            <constraint firstItem="Dkx-Ij-7Ax" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="7VP-G7-1Mg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ab7-QF-2eD" secondAttribute="trailing" constant="12" id="9sJ-UR-1Sp"/>
+                            <constraint firstItem="Ab7-QF-2eD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="12" id="DGc-mZ-lLp"/>
                             <constraint firstItem="jHx-R0-QhO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="Eqa-hS-hi6"/>
+                            <constraint firstItem="IP3-ei-0Jn" firstAttribute="top" secondItem="Dkx-Ij-7Ax" secondAttribute="bottom" constant="459" id="Ha6-14-qIE"/>
+                            <constraint firstItem="jHx-R0-QhO" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="301" id="KID-DE-fWL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jHx-R0-QhO" secondAttribute="trailing" constant="24" id="Ks5-yt-mna"/>
-                            <constraint firstItem="Ab7-QF-2eD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="Ozq-V8-nPN"/>
-                            <constraint firstItem="Ab7-QF-2eD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="167" id="Rqd-Q8-lTh"/>
                             <constraint firstItem="Dkx-Ij-7Ax" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="V6E-ty-7ur"/>
                             <constraint firstAttribute="bottom" secondItem="IP3-ei-0Jn" secondAttribute="bottom" id="ZSN-4a-Vsj"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ab7-QF-2eD" secondAttribute="trailing" constant="24" id="lKT-X1-4Ua"/>
+                            <constraint firstItem="IP3-ei-0Jn" firstAttribute="top" secondItem="Ab7-QF-2eD" secondAttribute="bottom" constant="61" id="pjZ-Yk-fMG"/>
                             <constraint firstItem="IP3-ei-0Jn" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="sFL-3F-I2Z"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ab7-QF-2eD" secondAttribute="bottom" constant="265" id="u9a-dP-MEf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -191,7 +187,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="431.8840579710145" y="70.3125"/>
         </scene>
     </scenes>
     <resources>
